# ai-collaboration-meeting

./: .coverage  .gitignore  CHANGELOG.md  FRONTEND_MIGRATION.md  PHASE10.md  PHASE11.md  PHASE8.md  PHASE9.md  PLAN.md  PLAN_ASSISTANT.md  README.md  ai-meeting-backend.service  cli.py  deploy.sh  index.html  package-lock.json  package.json  pyproject.toml  vite.config.js  vite.config.ts
backend/: main.py  pyproject.toml
backend/meeting/: __init__.py  code_generator.py  consensus.py  database.py  engine.py  executor_manager.py  mermaid_generator.py  middleware.py  models.py  openai_executor.py  output_generator.py  output_handler.py  runner.py  scene_parser.py  state.py  websocket.py
backend/outputs/: 02cbf0f0_20260506_221738.md  05e9b72a_20260506_191153.html  05e9b72a_20260506_191153.json  05e9b72a_20260506_191153.md  05e9b72a_20260506_191153.yaml  1193ac09_20260506_192740.md  1e7a4c80_20260506_191229.md  20a7db52_20260506_195155.md  2c39af75_20260506_193816.html  2c39af75_20260506_193816.json  2c39af75_20260506_193816.md  2c39af75_20260506_193816.yaml  32a21ef5_20260506_191229.md  4a896bd2_20260506_221738.md  4ec43040_20260506_195958.html  4ec43040_20260506_195958.json  4ec43040_20260506_195958.md  4ec43040_20260506_195958.yaml  52f0b5fa_20260506_175432.md  77af6fb9_20260506_191229.html  77af6fb9_20260506_191229.json  77af6fb9_20260506_191229.md  77af6fb9_20260506_191229.yaml  78b8db93_20260506_203934.md  7b6358a3_20260506_175351.md  809e5226_20260506_203934.md  8e695aea_20260506_203934.html  8e695aea_20260506_203934.json  8e695aea_20260506_203934.md  (+27 more)
docs/: API.md  (+2 more)
(+77 files in other folders)
